# solidity

./: CMakeLists.txt  Changelog.md
.circleci/: config.yml
docs/: using-the-compiler.rst
docs/contracts/: functions.rst
liblsp/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  Logger.h  MessageParser.cpp  OutputGenerator.cpp  OutputGenerator.h  Server.cpp  Server.h  TcpTransport.cpp  TcpTransport.h  TextBuffer.h  Transport.cpp  Transport.h  VFS.cpp  VFS.h  protocol.h  protocol_removed_structs.h
libsolidity/ast/: ASTUtils.cpp
libsolidity/codegen/: ExpressionCompiler.cpp
libsolidity/codegen/ir/: IRGeneratorForStatements.cpp
libsolutil/: LP.cpp  LP.h  Whiskers.cpp  Whiskers.h
libyul/optimiser/: NameSimplifier.cpp  ReasoningBasedSimplifier.cpp  ReasoningBasedSimplifier.h
scripts/: check_style.sh
scripts/bytecodecompare/: prepare_report.py
solls/: CMakeLists.txt  FileReader.cpp  FileReader.h  LanguageServer.cpp  LanguageServer.h  main.cpp
solls/lsp/: CMakeLists.txt  MessageParser.cpp  Range.h  TextBuffer.h  Transport.cpp  Transport.h
test/: CMakeLists.txt  cmdlineTests.sh
test/cmdlineTests/code_length_size/: args  err  input.sol  output
test/cmdlineTests/evm_to_wasm_break/: output
test/cmdlineTests/exp_base_literal/: output
test/cmdlineTests/ir_compiler_subobjects/: output
test/cmdlineTests/name_simplifier/: output
test/cmdlineTests/optimizer_array_sload/: output
test/cmdlineTests/standard_optimizer_generatedSources/: output.json
test/cmdlineTests/standard_viair_requested/: output.json
test/cmdlineTests/viair_abicoder_v1/: output
test/cmdlineTests/viair_subobjects/: output
test/cmdlineTests/yul_string_format_ascii/: output.json
test/libsolidity/: SemanticTest.cpp  SolidityEndToEndTest.cpp
test/libyul/: YulOptimizerTest.cpp  YulOptimizerTestCommon.cpp
test/lsp/: VFS_test.cpp
test/scripts/: test_bytecodecompare_prepare_report.py
test/tools/: fuzzer_common.cpp
(+13 files in other folders)
